--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "nodemon ./src/bin/www",
     "create:db": "sequelize db:create && sequelize db:migrate && sequelize db:seed:all",
     "reset:db": "sequelize db:drop && npm run create:db",
-    "dev:reset":"npm run reset:db && nodemon ./bin/www"
+    "dev:reset": "npm run reset:db && nodemon ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -17,13 +17,16 @@
     "express": "~4.16.1",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "path": "^0.12.7",
     "sequelize": "^6.23.2",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "uuid": "^9.0.0"
   }
 }
