--- a/src/database/config/config.json
+++ b/src/database/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "new-homeDB",
+    "database": "new-homeDB-16",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
